// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing restaurant category component Should render as not selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderRadius": 30,
      "justifyContent": "center",
      "marginRight": 10,
      "opacity": 1,
      "paddingBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 30,
          "height": 50,
          "justifyContent": "center",
          "width": 50,
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 35,
            "resizeMode": "contain",
            "width": 35,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": 10,
        },
      ]
    }
  >
    <Text
      isSelected={false}
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 11,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Modern Fries
    </Text>
  </View>
</View>
`;

exports[`Testing restaurant category component Should render as selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FC6D3F",
      "borderRadius": 30,
      "justifyContent": "center",
      "marginRight": 10,
      "opacity": 1,
      "paddingBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 30,
          "height": 50,
          "justifyContent": "center",
          "width": 50,
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 35,
            "resizeMode": "contain",
            "width": 35,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": 10,
        },
      ]
    }
  >
    <Text
      isSelected={true}
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 11,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Modern Fries
    </Text>
  </View>
</View>
`;
